[package]
name = "wasabi"
version = "0.1.0"
authors = ["Hiromitsu Oshiba <0x75960@chocola.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
structopt = "0.3.8"
toml = "0.5.6"

[dependencies.quick-xml]
features = ["serialize"]
version = "0.17.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.104"
